--- a/index.html
+++ b/index.html
@@ -62,14 +62,12 @@ a.cc-notification-moreinfo, #cc-notification, #cc-notification-wrapper>h2>span:f
     <div class="wrapper">
               
       
-         <div class="content2general">
-<div class="impar"><span class="numberImpar">CA </span>
-<div class="contenidoSecciones">
-<h2>INFORMACIÓN - YourName</h2>
-<i>YourName Roleplay</i> es un servidor de samp basado en 
-un modo de juego Roleplay, donde puedes realizar un estilo de vida
- a tu manera, siempre y cuando cumplas con las reglas del mismo.
- Te invitamos, para que puedas formar parte de esta comunidad, y que puedas divertirte a fondo en ella y descubrir todas las oportunidades que te ofrecemos. 
+         <div class="content2general"> <div class="impar"><span
+class="numberImpar">CA </span> <div class="contenidoSecciones">
+<h2>Builder_Team_BNDS contrataciones </h2> <i>Builder_Team_BNDS</i> para
+contratarnos debes tener un grupo de Roblox en el cual el equipo de mappers
+recibiremos nuestra paga en ROBUX. Trabajamos de manera rapida y organisada,
+puedes contactarnos en robloxbuilderteam@gmail.com
 
  <!-- <img src="foto.jpg" width="580" height="390" />-->
 </p>
