--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html; charset=windows-1252">
 
 
-    <title> YourName Roleplay</title>   
+    <title>BuilderTeam</title>   
    
     <link rel="canonical" ...=""> 
       <link href="Index_archivos/css_002.css" rel="stylesheet" type="text/css">
@@ -47,11 +47,11 @@ a.cc-notification-moreinfo, #cc-notification, #cc-notification-wrapper>h2>span:f
             <nav id="navigation"> 
 
         <ul>
-            <li class="cc-clear"><span><a href="index.html" class="claim">INICIO</a></span></li>
+            <li class="cc-clear"><span><a href="download  .html" class="claim">HOME</a></span></li>
             <li>
-			<span><a href="#" class="claim">FORO</a></span></li>
+			<span><a href="#" class="claim">Contratanos</a></span></li>
             <li class="menu-item current-menu-ancestor">
-			<a href="http://www.facebook.com/FP" class="claim">FACEBOOK</a></li> 
+			<a href="http://www.facebook.com/FP" class="claim">Redes Sociales</a></li> 
         </ul>
        </nav>
        </div>
@@ -75,7 +75,7 @@ puedes contactarnos en robloxbuilderteam@gmail.com
  <img src="imagenes/ca.png" width="760" height="475">
 
 </p>
- <DIV ALIGN=right><a class="linkContinuidad" href="http://tuforo.net/foro"	>¿Quieres participar? Ingresa aquí.</a>.</p></DIV>
+ <DIV ALIGN=right><a class="Network Name" href="https://www.youtube.com/channel/UCpEP7axy3325H-TPJDLhFFQ"	>Canal Youtube</a>.</p></DIV>
 
  </p><!--     <p class="oculto"> Aquí puedes ver una <a href="#" target="_blank">lista completa de todas las propiedades</a> de CSS2 y CSS3 y sus posibles valores.</p>--></div></div></div>
 
@@ -88,11 +88,11 @@ puedes contactarnos en robloxbuilderteam@gmail.com
                
                 
              <li>
-			<span><a href="index.html" class="Navegation1">INICIO</a></span>
+			<span><a href="download.html" class="Navegation1">Home</a></span>
 </li><li>
-			<span><a href="#" class="Navegation1">FORO</a></span>
+			<span><a href="#" class="Navegation1">Contratanos</a></span>
 </li><li class="menu-item current-menu-ancestor">
-			<a href="http://www.facebook.com/TUFP" class="NavegationSelect1">FACEBOOK</a>
+			<a href="http://www.facebook.com/TUFP" class="NavegationSelect1">Redes Sociales</a>
 </li> 
         </ul>
        </nav>
