--- a/media.html
+++ b/media.html
@@ -20,11 +20,11 @@
 						<div class="inner">
 							<h2><IMG SRC="images/logoblanco.png"></h2>
 							<ul class="actions">
-								<li><a href="http://tuforo.net/" class="button">Youtube</a></li>
-								<li><a href="http://tupcu.net/" class="button">Roblox</a></li>
+								<li><a href="https://www.youtube.com/channel/UCpEP7axy3325H-TPJDLhFFQ" class="button">Youtube</a></li>
+								<li><a href="https://www.roblox.com/users/465200203/profile" class="button">Roblox</a></li>
 							</ul>
 							<ul class="actions">
-								<li><a href="http://tutienda.net/" class="button">Inicio</a></li>
+								<li><a href="download.html" class="button">Inicio</a></li>
 							</ul>
 							</div>
 					</section>
