--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ puedes contactarnos en robloxbuilderteam@gmail.com
  <!-- <img src="foto.jpg" width="580" height="390" />-->
 </p>
 
- <img src="imagenes/ca.png" width="760" height="475">
+ <img src="imagenes/ce.jpg" width="760" height="475">
 
 </p>
  <DIV ALIGN=right><a class="Network Name" href="https://www.youtube.com/channel/UCpEP7axy3325H-TPJDLhFFQ"	>Canal Youtube</a>.</p></DIV>
