--- a/download.html
+++ b/download.html
@@ -104,8 +104,8 @@
                               <!-- END Rotator Text -->
                            </div>
                            <div class="bottom bottom-nav">
-                                <a href="http://www.builderteamco.epizy.com/" class="http://www.builderteamco.epizy.com/"> <span class="btn btn-default btn-lg">WEB</span></a>
-                                <a href="https://www.roblox.com/users/465200203/profile" class="btn btn-default btn-lg"> <span class="network-name">ROBLOX</span></a>
+                                <a href="index.html" class="http://www.builderteamco.epizy.com/"> <span class="btn btn-default btn-lg">Contratanos</span></a>
+                                <a href="media.html" class="btn btn-default btn-lg"> <span class="network-name">Redes</span></a>
                                 
                            </div>
                         </div>
