--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ a.cc-notification-moreinfo, #cc-notification, #cc-notification-wrapper>h2>span:f
             <nav id="navigation"> 
 
         <ul>
-            <li class="cc-clear"><span><a href="download  .html" class="claim">HOME</a></span></li>
+            <li class="cc-clear"><span><a href="download.html" class="claim">HOME</a></span></li>
             <li>
 			<span><a href="#" class="claim">Contratanos</a></span></li>
             <li class="menu-item current-menu-ancestor">
-			<a href="http://www.facebook.com/FP" class="claim">Redes Sociales</a></li> 
+			<a href="media.html" class="claim">Redes Sociales</a></li> 
         </ul>
        </nav>
        </div>
@@ -92,7 +92,7 @@ puedes contactarnos en robloxbuilderteam@gmail.com
 </li><li>
 			<span><a href="#" class="Navegation1">Contratanos</a></span>
 </li><li class="menu-item current-menu-ancestor">
-			<a href="http://www.facebook.com/TUFP" class="NavegationSelect1">Redes Sociales</a>
+			<a href="media.html" class="Navegation1">Redes Sociales</a>
 </li> 
         </ul>
        </nav>
